refactored getters in TeamMapper